# open_tracks

./: .gitignore  README.md  channal_review.py  frontend.py  gui.py  interface.py  npsk.py  pyproject.toml  requirements_xp.txt  review.py  review_model.py  setup.cfg  test_read_binr.py  test_request.py  testing_timer.py  trust.py
app/: create_app.py  interface.py  review_model.py
open_track/: review_model.py
run_module/: review_model.py
tests/: interface.py  test_connections.py  test_info_tracks.py  test_info_tracks_read.py  test_init_comports.py  test_open_track.py  test_start_page.py
version0.1/: interface.py  review_model(vector_status).py
ТДЦК.90058-01 12 01/: BM_Ctrl.ini
