[tool.poetry]
name = "open_track"
version = "0.1.0"
description = ""
authors = ["stolypinskij_gv <stolypinskij_gv@NAVEL-048>"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "3.5"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
